--- a/contact.html
+++ b/contact.html
@@ -9,7 +9,7 @@
 <body>
     <nav>
         <ul>
-            <li><a href="/homepage.html">About Me</a></li>
+            <li><a href="/index.html">About Me</a></li>
             <li><a href="/contact.html">Photography</a></li>
             <li><a href="/contact.html">Contact Form</a></li>
             <li><a href="/experiments.html">Experiments</a></li>
