website done (bare minimum)

--- a/experiments.html
+++ b/experiments.html
@@ -4,11 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Experiments mwhahahaha</title>
-    <style>
-        canvas {
-            border: 5px solid red;
-        }
-    </style>
+    
 </head>
 <header id="top">
     <nav>
@@ -22,6 +18,7 @@
 </header>
 <body>
     <h1>Experiments</h1>
+    <hr>
     <canvas id="testCanvas">
         This is a canvas. If you see this, your browser does not support it.
     </canvas>
@@ -32,9 +29,22 @@
         canvx.fillStyle = "blue";
         canvx.fillRect(50, 50, 200, 50);
     </script>
+    <hr>
     <math>
         <mi>E</mi><mo>=</mo><mi>m</mi><msup><mi>c</mi><mi>2</mi></msup>
     </math>
+    <br>
+    <hr>
+    <div>
+        <em>Contact me iframe!</em><br>
+        <iframe src="https://chimerical-mooncake-e2719e.netlify.app/contact" frameborder="2">This didn't work.</iframe>
+    </div>
+    <hr>
+    <div>
+        <p>What do you call a ghost with no nose? Nobody has an answer for me :(</p>
+        <audio src="punchline.mp3" controls>Knee slapper!</audio>
+    </div>
+    <hr>
 </body>
 <footer>
     <a href="#top">Go to Top</a>
