--- a/contact.html
+++ b/contact.html
@@ -10,7 +10,7 @@
     <nav>
         <ul>
             <li><a href="/index.html">About Me</a></li>
-            <li><a href="/contact.html">Photography</a></li>
+            <li><a href="/photography.html">Photography</a></li>
             <li><a href="/contact.html">Contact Form</a></li>
             <li><a href="/experiments.html">Experiments</a></li>
         </ul>
