--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
     </section>
     
     <section>
-        <h3>The UCSD Guardian <svg src="guardian.svg"></svg></h3>
+        <h3>The UCSD Guardian</h3>
         <p>For two years, I have been very involved in UCSD's newspaper, working to bring it more into the digital age through social media and technology.<br>
             I'm very passionate about journalism and photography, which you can see more of <a href="photography.html">here.</a><br>
         </p>
