--- a/photography.html
+++ b/photography.html
@@ -9,7 +9,7 @@
             border: 1px solid black;
         }
     </style>
-    <!--link rel="stylesheet" href="style.css"-->
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
