--- a/contact.html
+++ b/contact.html
@@ -7,15 +7,17 @@
     <link rel="stylesheet" href="style.css">
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
 </head>
-<body>
+<header>
     <nav>
         <ul>
-            <li><a href="/index.html">About Me</a></li>
-            <li><a href="/photography.html">Photography</a></li>
-            <li><a href="/contact.html">Contact Form</a></li>
-            <li><a href="/experiments.html">Experiments</a></li>
+            <li class="nav-item"><a href="/index.html">About Me</a></li>
+            <li class="nav-item"><a href="/photography.html">Photography</a></li>
+            <li class="nav-item"><a href="/contact.html">Contact Form</a></li>
+            <li class="nav-item"><a href="/experiments.html">Experiments</a></li>
         </ul>
     </nav>
+</header>
+<body>
     <h1>Contact Me</h1>
     <form action="/contact.html">
         <fieldset>
