--- a/contact.html
+++ b/contact.html
@@ -17,10 +17,13 @@
             <li class="nav-item"><a href="/experiments.html">Experiments</a></li>
         </ul>
     </nav>
+    <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" x="0px" y="0px" viewBox="0 0 64 80" style="enable-background:new 0 0 64 64;" id="sun-moon">
+        <path d="M49,26c-3.3,0-6-2.7-6-6s2.7-6,6-6s6,2.7,6,6S52.3,26,49,26z M49,16c-2.2,0-4,1.8-4,4s1.8,4,4,4s4-1.8,4-4S51.2,16,49,16z"/><path d="M49,12c-0.6,0-1-0.4-1-1V7c0-0.6,0.4-1,1-1s1,0.4,1,1v4C50,11.6,49.6,12,49,12z"/><path d="M49,34c-0.6,0-1-0.4-1-1v-4c0-0.6,0.4-1,1-1s1,0.4,1,1v4C50,33.6,49.6,34,49,34z"/><path d="M42.6,14.6c-0.3,0-0.5-0.1-0.7-0.3l-2.8-2.8c-0.4-0.4-0.4-1,0-1.4c0.4-0.4,1-0.4,1.4,0l2.8,2.8c0.4,0.4,0.4,1,0,1.4  C43.1,14.5,42.9,14.6,42.6,14.6z"/><path d="M58.2,30.2c-0.3,0-0.5-0.1-0.7-0.3l-2.8-2.8c-0.4-0.4-0.4-1,0-1.4c0.4-0.4,1-0.4,1.4,0l2.8,2.8c0.4,0.4,0.4,1,0,1.4  C58.7,30.1,58.4,30.2,58.2,30.2z"/><path d="M40,21h-4c-0.6,0-1-0.4-1-1s0.4-1,1-1h4c0.6,0,1,0.4,1,1S40.6,21,40,21z"/><path d="M62,21h-4c-0.6,0-1-0.4-1-1s0.4-1,1-1h4c0.6,0,1,0.4,1,1S62.6,21,62,21z"/><path d="M39.8,30.2c-0.3,0-0.5-0.1-0.7-0.3c-0.4-0.4-0.4-1,0-1.4l2.8-2.8c0.4-0.4,1-0.4,1.4,0c0.4,0.4,0.4,1,0,1.4l-2.8,2.8  C40.3,30.1,40.1,30.2,39.8,30.2z"/><path d="M55.4,14.6c-0.3,0-0.5-0.1-0.7-0.3c-0.4-0.4-0.4-1,0-1.4l2.8-2.8c0.4-0.4,1-0.4,1.4,0c0.4,0.4,0.4,1,0,1.4l-2.8,2.8  C55.9,14.5,55.6,14.6,55.4,14.6z"/>
+    </svg>
 </header>
 <body>
     <h1>Contact Me</h1>
-    <form action="https://httpbin.org/post" method="post">
+    <form action="https://httpbin.org/post" method="post" novalidate>
             
         <label for="name">Name: <span class="req-star">*</span></label>
         <input type="text" name="name" id="name" required>
@@ -36,9 +39,13 @@
         <textarea name="message" id="message-box" minlength="25" maxlength="250" cols="40" rows="10" oninput="updateCharCount()"></textarea>
         <output for="message" id="message-errs"></output>
         <output for="message" id="message-info">250</output>
-        <input type="checkbox" name="possible_bot" id="possible_bot" hidden checked min="25" max="250"></textarea>
+        <input type="hidden" name="possible_bot" id="possible_bot" value="true" min="25" max="250">
         <br>
+        <input type="hidden" name="form-errors" id="form-errors" value="[]">
+
         <button type="submit">Submit</button>
     </form>
 </body>
+<footer>
+</footer>
 </html>
